@@ -13,6 +13,11 @@ CMF 1.6.3-beta (unreleased)
       of transitions with variable expressions set.  They were previously 
       being imported as text rather tha Expressions.
 
+    - CMFCore.DynamicType: Fixed behaviour regarding default view.
+      DynamicType was making it impossible to use a Zope3-style
+      default view for CMF content types.
+      (http://www.zope.org/Collectors/CMF/459)
+
 
 CMF 1.6.2 (2006/08/15)
 
